[package]
name = "monkeys"
version = "0.1.0"
authors = ["Yuri Vasquez <yuri.vasquez@g.globo>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.6.2"
rand = "0.7.3"
regex = "1.3.9"
lazy_static = "1.4.0"
structopt = "0.3.15"
